# ray-tracer

./: CMakeLists.txt  README.md  vcpkg.json
JSONSceneLoader/: CMakeLists.txt  CMakePresets.json  ISceneLoader.h  SceneLoader.h  SceneParser_JSON.cpp  SceneParser_JSON.h  sceneLoaderTest.cpp  test_sceneParsing_JSON.cpp  vcpkg.json
OpenGL/: CMakeLists.txt  Camera.cpp  Mesh.h  Texture.cpp  Texture.h  Trimesh.h  fbExample.cpp  finalRender.cpp  fragmentShader_BlinnPhong.glsl  fragmentShader_Lambertian.glsl  glfwExample.cpp  silverLever.cpp  textureCube.cpp  vertexShader_BlinnPhong.glsl  vertexShader_PrepForPerFragment.glsl  vertexShader_withMatrixTransformation.glsl
OpenGL/Objects/: Camera.h  Light.h  Mesh.cpp  Sphere.cpp  Sphere.h  Texture.cpp  Trimesh.cpp  textureCube.cpp
OpenGL/Shaders/: fragmentShader_BlinnPhongLights.glsl  fragmentShader_Depth.glsl  fragmentShader_Lambertian.glsl  fragmentShader_LambertianLights.glsl  fragmentShader_Normal.glsl  fragmentShader_gammaCorrection.glsl  fragmentShader_passthrough.glsl  vertexShader_BlinnPhongLights.glsl  vertexShader_Depth.glsl  vertexShader_LambertianLights.glsl  vertexShader_passthrough.glsl  vertexShader_screenQuad.glsl
OpenGL/Shadows/: Shadowmap.cpp  Shadowmap.h
examples/: CMakeLists.txt  fb.cpp  mirrorTest.cpp  test.cpp  test_pngWrite.cpp
graphicsLib/: BlinnPhongShader.cpp  BlinnPhongShader.h  Camera.h  Framebuffer.cpp  Framebuffer.h  HitStructure.h  LambertianShader.cpp  LambertianShader.h  Light.h  MirrorShader.cpp  MirrorShader.h  PerspectiveCamera.cpp  PerspectiveCamera.h  PointLight.cpp  PointLight.h  Ray.h  Scene.cpp  Scene.h  Shader.h  Shape.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  ray.h  vec3.h
src/: CMakeLists.txt
src/png++/: config.hpp
utests/: CMakeLists.txt  ray_tests.cpp  sphere_tests.cpp  vec3_tests.cpp
